--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -14,8 +14,11 @@
      iframe{
 
         width: 95vw;
-        height: 400px;
+        max-width: 920px;
+        height:400px;
         border:2px solid black;
+        display: block;
+        margin:auto;
      }
 
     </style>
@@ -31,10 +34,10 @@
     <li> <a href="paginas-extras/pag003.html" target="frame1">Terceira Pagina</a> </li>
 
     </ul>
-    
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem provident minima esse! Adipisci beatae perferendis qui et hic rerum ipsa ipsam quam tenetur eos officiis fuga nesciunt, reprehenderit cum vero? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel earum ut mollitia, nobis provident voluptate ducimus? Laudantium explicabo repellat, velit aliquam molestiae id inventore quod cupiditate dolorem sint eaque suscipit </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem provident minima esse! Adipisci beatae perferendis qui et hic rerum ipsa ipsam quam tenetur eos officiis fuga nesciunt, reprehenderit cum vero? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel earum ut mollitia, nobis provident voluptate ducimus? Laudantium explicabo repellat, velit aliquam molestiae id inventore quod cupiditate dolorem sint eaque suscipit </p>
 
-    <iframe name="frame1" src="">
+    <iframe name="frame1" srcdoc=" <h1>escolha uma das opções acima</h1> <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa animi veritatis cupiditate soluta! Unde illum placeat sed sit nostrum iste amet asperiores nisi reiciendis soluta aliquid magni, consectetur deserunt voluptas?</p> <img src='imagens/IMG_9949_2.jpg'>
+        ">
         <p>Navegador não compativel</p>
     </iframe>
 
